[gd_scene load_steps=3 format=3 uid="uid://csfmytst2ilst"]

[ext_resource type="Script" path="res://ability/clackers/clackers.gd" id="1_jmoul"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nbbxl"]
radius = 80.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jmoul")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_nbbxl")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
